src/tests/snapshots/cendol__tests__semantic_initializers_extras__fam_initialization.snap
---
source: src/tests/semantic_initializers_extras.rs
expression: mir
---
type %t0 = i32
type %t1 = struct S { x: %t0, y: %t2 }
type %t2 = [0]%t0

global @s: %t1 = const struct_literal { 0: const 1, 1: const array_literal [const 2, const 3] }

fn main() -> i32
{

  bb1:
    return const 0
}
