src/tests/snapshots/cendol__tests__semantic_initializers_extras__range_designators.snap
---
source: src/tests/semantic_initializers_extras.rs
assertion_line: 21
expression: mir
---
type %t0 = i32
type %t1 = [10]%t0

global @a: [10]i32 = const array_literal [const zero, const 5, const 5, const 5, const zero, const 6, const 6, const zero, const zero, const zero]

fn main() -> i32
{

  bb1:
    return const 0
}
