src/tests/snapshots/cendol__tests__semantic_initializers_extras__scalar_to_aggregate_elision.snap
---
source: src/tests/semantic_initializers_extras.rs
expression: mir
---
type %t0 = i32
type %t1 = struct Wrapper { s: %t2 }
type %t2 = struct S { x: %t0, y: %t0 }

global @w: %t1 = const struct_literal { 0: const struct_literal { 0: const 1 } }

fn main() -> i32
{

  bb1:
    return const 0
}
